fix navbar style on smaller devices

--- a/MultiVendor-FrontEnd/src/app/vendor-dashboard/vendor-dashboard.component.scss
+++ b/MultiVendor-FrontEnd/src/app/vendor-dashboard/vendor-dashboard.component.scss
@@ -61,4 +61,7 @@ padding: 25px;
         left: 0;
         margin: 0;
     }
+    .store-logo ,.store-name{
+        display: none;
+    }
 }
